@@ -1,3 +1,9 @@
+2007-07-06  Hector E. Gomez Morales <hectoregm@gmail.com> 
+
+	* Monodoc.Editor.Gui/DocumentBufferArchiver.cs: Added two new methods
+	  to handle the deserialization of the attributes of the elements
+	  "Member" and "MemberSignature".
+
 2007-07-04  Hector E. Gomez Morales <hectoregm@gmail.com> 
 
 	* MIT.X11, AUTHORS, NEWS, README: Adding and moving basic files.
